<resources>
    <string name="app_name">Calendario Electoral</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hint_email">Email</string>
    <string name="hint_password">Contraseña</string>
    <string name="btn_login">iniciar sesion</string>
    <string name="no_message_text">No hay notificaciones</string>
    <string name="title_1">Inicio de sesion</string>

    <string name="menu_salir">Salir</string>

    <string name="calendario_actualizado">Calendario electoral 2017-2018</string>
    <string name="txt_fecha_actualizacion">actualizado hasta: 07/09/2017</string>
    <string name="calendario_electoral_2019">Calendario Electoral 2019</string>


    <string name="actividad">Actividades</string>
    <string name="descripcion_actividad">"Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum."</string>
    <string name="no_actividades">No hay actividades programadas para este día</string>

    <string name="fecha_inicio">Inicio</string>
    <string name="fecha_fin">Fin</string>

    <string name="_2018">2018</string>
    <string name="_2019">2019</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="nav_todos">TODAS</string>
    <string name="nav_ejecucion">EN PROCESO</string>
    <string name="nav_finalizada">FINALIZADO</string>
    <string name="nav_inician_hoy">INICIAN HOY</string>
    <string name="nav_finalizan_hoy">FINALIZAN HOY</string>
    <string name="nav_proximas">PROXIMAS</string>
    <string name="menu_filter">FILTRO</string>
    <!--<string name="nav_LIMPIAR_FILTRO">LIMPIAR FILTRO</string>-->
    <string name="txt_estado">Inicia en 11 días</string>
    <string name="actividades_inicia_hoy">INICIAN HOY</string>
    <string name="actividades_finalizan_hoy">FINALIZAN HOY</string>
    <string name="actividades_proximas">PROXIMAS</string>
</resources>
